@@ -1275,7 +1275,7 @@ public abstract class Image extends Rectangle {
 	/** Creates a new serial id. */
 	static private synchronized Long getSerialId() {
 		++serialId;
-		return new Long(serialId);
+		return Long.valueOf(serialId);
 	}
 
 	/**
