@@ -70,7 +70,7 @@ import com.aowagie.text.exceptions.BadPasswordException;
 class PdfCopyFieldsImp extends PdfWriter {
 
     private static final PdfName iTextTag = new PdfName("_iTextTag_");
-    private static final Integer zero = new Integer(0);
+    private static final Integer zero = Integer.valueOf(0);
     private final ArrayList readers = new ArrayList();
     HashMap readers2intrefs = new LinkedHashMap();
     private final HashMap pages2intrefs = new LinkedHashMap();
@@ -259,7 +259,7 @@ class PdfCopyFieldsImp extends PdfWriter {
             for (int k = 0; k < size; ++k) {
                 t.add(zero);
             }
-            t.add(new Integer(v));
+            t.add(Integer.valueOf(v));
             this.tabOrder.put(annots, t);
             annots.add(ind);
         }
@@ -267,14 +267,14 @@ class PdfCopyFieldsImp extends PdfWriter {
             int size = t.size() - 1;
             for (int k = size; k >= 0; --k) {
                 if (((Integer)t.get(k)).intValue() <= v) {
-                    t.add(k + 1, new Integer(v));
+                    t.add(k + 1, Integer.valueOf(v));
                     annots.add(k + 1, ind);
                     size = -2;
                     break;
                 }
             }
             if (size != -2) {
-                t.add(0, new Integer(v));
+                t.add(0, Integer.valueOf(v));
                 annots.add(0, ind);
             }
         }
@@ -667,7 +667,7 @@ class PdfCopyFieldsImp extends PdfWriter {
     private static final HashMap widgetKeys = new LinkedHashMap();
     protected static final HashMap fieldKeys = new LinkedHashMap();
     static {
-        final Integer one = new Integer(1);
+        final Integer one = Integer.valueOf(1);
         widgetKeys.put(PdfName.SUBTYPE, one);
         widgetKeys.put(PdfName.CONTENTS, one);
         widgetKeys.put(PdfName.RECT, one);
